// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertData allLatestTransfers should convert html data in a correct way 1`] = `
Array [
  Object {
    "age": "32",
    "fee": "?",
    "joinedTeam": "Toronto FC",
    "joinedTeamCountry": "Canada",
    "leftTeam": "AJ Auxerre",
    "leftTeamCountry": "France",
    "marketValue": "600 Th. €",
    "name": "Quentin Westberg",
    "nationality": "United States",
    "transferDate": "Feb 25, 2019",
  },
  Object {
    "age": "27",
    "fee": "Loan",
    "joinedTeam": "CFR Cluj",
    "joinedTeamCountry": "Romania",
    "leftTeam": "GZ Hengfeng",
    "leftTeamCountry": "China",
    "marketValue": "1,20 Mill. €",
    "name": "Kévin Boli",
    "nationality": "Cote d'Ivoire",
    "transferDate": "Feb 24, 2019",
  },
  Object {
    "age": "22",
    "fee": "?",
    "joinedTeam": "BJ Sinobo Guoan",
    "joinedTeamCountry": "China",
    "leftTeam": "West Brom",
    "leftTeamCountry": "England",
    "marketValue": "1,50 Mill. €",
    "name": "Yuning Zhang",
    "nationality": "China",
    "transferDate": "Feb 24, 2019",
  },
  Object {
    "age": "27",
    "fee": "450 Th. €",
    "joinedTeam": "GZ Hengfeng",
    "joinedTeamCountry": "China",
    "leftTeam": "Apol. Limassol",
    "leftTeamCountry": "Cyprus",
    "marketValue": "1,50 Mill. €",
    "name": "Anton Maglica",
    "nationality": "Croatia",
    "transferDate": "Feb 24, 2019",
  },
  Object {
    "age": "30",
    "fee": "?",
    "joinedTeam": "BJ Renhe",
    "joinedTeamCountry": "China",
    "leftTeam": "Reading",
    "leftTeamCountry": "England",
    "marketValue": "3,50 Mill. €",
    "name": "Sone Aluko",
    "nationality": "Nigeria",
    "transferDate": "Feb 23, 2019",
  },
  Object {
    "age": "30",
    "fee": "",
    "joinedTeam": "Chicago Fire",
    "joinedTeamCountry": "United States",
    "leftTeam": "Philadelphia",
    "leftTeamCountry": "United States",
    "marketValue": "1,25 Mill. €",
    "name": "C.J. Sapong",
    "nationality": "United States",
    "transferDate": "Feb 23, 2019",
  },
  Object {
    "age": "28",
    "fee": "-",
    "joinedTeam": "Újpest FC",
    "joinedTeamCountry": "Hungary",
    "leftTeam": "Without Club",
    "leftTeamCountry": "",
    "marketValue": "2,50 Mill. €",
    "name": "Lacina Traoré",
    "nationality": "Cote d'Ivoire",
    "transferDate": "Feb 23, 2019",
  },
  Object {
    "age": "31",
    "fee": "Free Transfer",
    "joinedTeam": "Atyrau",
    "joinedTeamCountry": "Kazakhstan",
    "leftTeam": "Akzhayik",
    "leftTeamCountry": "Kazakhstan",
    "marketValue": "600 Th. €",
    "name": "Andrii Tkachuk",
    "nationality": "Ukraine",
    "transferDate": "Feb 23, 2019",
  },
  Object {
    "age": "28",
    "fee": "2,50 Mill. €",
    "joinedTeam": "Grêmio",
    "joinedTeamCountry": "Brazil",
    "leftTeam": "Sport Recife",
    "leftTeamCountry": "Brazil",
    "marketValue": "2,75 Mill. €",
    "name": "André",
    "nationality": "Brazil",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "27",
    "fee": "-",
    "joinedTeam": "Without Club",
    "joinedTeamCountry": "",
    "leftTeam": "KS Samara",
    "leftTeamCountry": "Russia",
    "marketValue": "700 Th. €",
    "name": "Alan Chochiev",
    "nationality": "Russia",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "23",
    "fee": "Loan",
    "joinedTeam": "Arsenal Kyiv",
    "joinedTeamCountry": "Ukraine",
    "leftTeam": "Shakhtar D.",
    "leftTeamCountry": "Ukraine",
    "marketValue": "500 Th. €",
    "name": "Viacheslav Tankovskyi",
    "nationality": "Ukraine",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "22",
    "fee": "?",
    "joinedTeam": "Pakhtakor",
    "joinedTeamCountry": "Uzbekistan",
    "leftTeam": "Kokand 1912",
    "leftTeamCountry": "Uzbekistan",
    "marketValue": "600 Th. €",
    "name": "Javokhir Sidikov",
    "nationality": "Uzbekistan",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "24",
    "fee": "Loan",
    "joinedTeam": "AFC Eskilstuna",
    "joinedTeamCountry": "Sweden",
    "leftTeam": "Rayo Vallecano",
    "leftTeamCountry": "Spain",
    "marketValue": "800 Th. €",
    "name": "José León",
    "nationality": "Spain",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "28",
    "fee": "?",
    "joinedTeam": "Mladá Boleslav",
    "joinedTeamCountry": "Czech Republic",
    "leftTeam": "Slavia Prag",
    "leftTeamCountry": "Czech Republic",
    "marketValue": "600 Th. €",
    "name": "Muris Mesanovic",
    "nationality": "Bosnia-Herzegovina",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "25",
    "fee": "Loan",
    "joinedTeam": "Slovan Liberec",
    "joinedTeamCountry": "Czech Republic",
    "leftTeam": "Slavia Prag",
    "leftTeamCountry": "Czech Republic",
    "marketValue": "1,25 Mill. €",
    "name": "Jan Sykora",
    "nationality": "Czech Republic",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "26",
    "fee": "Loan",
    "joinedTeam": "Mladá Boleslav",
    "joinedTeamCountry": "Czech Republic",
    "leftTeam": "Slavia Prag",
    "leftTeamCountry": "Czech Republic",
    "marketValue": "1,25 Mill. €",
    "name": "Jakub Jugas",
    "nationality": "Czech Republic",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "23",
    "fee": "?",
    "joinedTeam": "Sparta Praha",
    "joinedTeamCountry": "Czech Republic",
    "leftTeam": "MFK Karvina",
    "leftTeamCountry": "Czech Republic",
    "marketValue": "800 Th. €",
    "name": "Filip Panak",
    "nationality": "Czech Republic",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "26",
    "fee": "Loan",
    "joinedTeam": "Sochi",
    "joinedTeamCountry": "Russia",
    "leftTeam": "Loko Moscow",
    "leftTeamCountry": "Russia",
    "marketValue": "500 Th. €",
    "name": "Timofey Margasov",
    "nationality": "Russia",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "23",
    "fee": "?",
    "joinedTeam": "FC Astana",
    "joinedTeamCountry": "Kazakhstan",
    "leftTeam": "Club Brugge",
    "leftTeamCountry": "Belgium",
    "marketValue": "1,00 Mill. €",
    "name": "Dorin Rotariu",
    "nationality": "Romania",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "33",
    "fee": "End of loan",
    "joinedTeam": "Birmingham",
    "joinedTeamCountry": "England",
    "leftTeam": "Coventry",
    "leftTeamCountry": "England",
    "marketValue": "1,00 Mill. €",
    "name": "David Stockdale",
    "nationality": "England",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "30",
    "fee": "1,30 Mill. €",
    "joinedTeam": "Sparta Praha",
    "joinedTeamCountry": "Czech Republic",
    "leftTeam": "HN Jianye",
    "leftTeamCountry": "China",
    "marketValue": "2,00 Mill. €",
    "name": "Borek Dockal",
    "nationality": "Czech Republic",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "29",
    "fee": "Free Transfer",
    "joinedTeam": "KS Samara",
    "joinedTeamCountry": "Russia",
    "leftTeam": "Anzhi",
    "leftTeamCountry": "Russia",
    "marketValue": "600 Th. €",
    "name": "Mohammed Rabiu",
    "nationality": "Ghana",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "22",
    "fee": "End of loan",
    "joinedTeam": "West Brom",
    "joinedTeamCountry": "England",
    "leftTeam": "ADO Den Haag",
    "leftTeamCountry": "Netherlands",
    "marketValue": "1,50 Mill. €",
    "name": "Yuning Zhang",
    "nationality": "China",
    "transferDate": "Feb 22, 2019",
  },
  Object {
    "age": "24",
    "fee": "Loan",
    "joinedTeam": "Poli. Iasi",
    "joinedTeamCountry": "Romania",
    "leftTeam": "Levski Sofia",
    "leftTeamCountry": "Bulgaria",
    "marketValue": "700 Th. €",
    "name": "Filipe Nascimento",
    "nationality": "Portugal",
    "transferDate": "Feb 21, 2019",
  },
  Object {
    "age": "25",
    "fee": "90 Th. €",
    "joinedTeam": "Sepsi Sf. Gh.",
    "joinedTeamCountry": "Romania",
    "leftTeam": "FC Poli Iasi",
    "leftTeamCountry": "Romania",
    "marketValue": "700 Th. €",
    "name": "Dylan Flores",
    "nationality": "Costa Rica",
    "transferDate": "Feb 21, 2019",
  },
]
`;

exports[`convertData search clubsSearch should convert html data in a correct way 1`] = `
Array [
  Object {
    "clubLink": "/inter-mailand/startseite/verein/46",
    "clubName": "Inter Milan",
    "country": "Italy",
    "totalMarketValue": "557,40 Mill. €",
  },
  Object {
    "clubLink": "/ac-mailand/startseite/verein/5",
    "clubName": "AC Milan",
    "country": "Italy",
    "totalMarketValue": "530,00 Mill. €",
  },
  Object {
    "clubLink": "/fk-metalac-gornji-milanovac/startseite/verein/12135",
    "clubName": "FK Metalac Gornji Milanovac",
    "country": "Serbia",
    "totalMarketValue": "3,05 Mill. €",
  },
  Object {
    "clubLink": "/inter-mailand-primavera/startseite/verein/5380",
    "clubName": "Inter Milan Primavera",
    "country": "Italy",
    "totalMarketValue": "2,20 Mill. €",
  },
  Object {
    "clubLink": "/inter-mailand-uefa-u19/startseite/verein/62104",
    "clubName": "Inter Mailand UEFA U19",
    "country": "Italy",
    "totalMarketValue": "2,20 Mill. €",
  },
  Object {
    "clubLink": "/us-bustese-roncalli/startseite/verein/49933",
    "clubName": "Milano City FC",
    "country": "Italy",
    "totalMarketValue": "700 Th. €",
  },
  Object {
    "clubLink": "/ac-mailand-primavera/startseite/verein/10958",
    "clubName": "Milan Primavera",
    "country": "Italy",
    "totalMarketValue": "400 Th. €",
  },
  Object {
    "clubLink": "/milano-united-a-f-c-/startseite/verein/37588",
    "clubName": "Milano Unite FC",
    "country": "South Africa",
    "totalMarketValue": "250 Th. €",
  },
  Object {
    "clubLink": "/fk-takovo-gornji-milanovac/startseite/verein/32117",
    "clubName": "FK Takovo Gornji Milanovac",
    "country": "Serbia",
    "totalMarketValue": "100 Th. €",
  },
  Object {
    "clubLink": "/fk-lunjevica-gornji-milanovac/startseite/verein/71902",
    "clubName": "FK Lunjevica Gornji Milanovac",
    "country": "Serbia",
    "totalMarketValue": "100 Th. €",
  },
]
`;

exports[`convertData teamTransfers arrivals transfers should convert html data in a correct way 1`] = `
Array [
  Object {
    "age": "19",
    "fee": "135,00 Mill. €",
    "marketValue": "120,00 Mill. €",
    "name": "Kylian Mbappé",
    "nationality": "France",
    "secondPartyTeam": "Monaco",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "21",
    "fee": "37,00 Mill. €",
    "marketValue": "18,00 Mill. €",
    "name": "Thilo Kehrer",
    "nationality": "Germany",
    "secondPartyTeam": "FC Schalke 04",
    "secondPartyTeamCountry": "Germany",
  },
  Object {
    "age": "25",
    "fee": "5,00 Mill. €",
    "marketValue": "12,00 Mill. €",
    "name": "Juan Bernat",
    "nationality": "Spain",
    "secondPartyTeam": "Bayern Munich",
    "secondPartyTeamCountry": "Germany",
  },
  Object {
    "age": "40",
    "fee": "Free Transfer",
    "marketValue": "2,00 Mill. €",
    "name": "Gianluigi Buffon",
    "nationality": "Italy",
    "secondPartyTeam": "Juventus",
    "secondPartyTeamCountry": "Italy",
  },
  Object {
    "age": "29",
    "fee": "Free Transfer",
    "marketValue": "8,00 Mill. €",
    "name": "Eric Maxim Choupo-Moting",
    "nationality": "Cameroon",
    "secondPartyTeam": "Stoke City",
    "secondPartyTeamCountry": "England",
  },
  Object {
    "age": "19",
    "fee": "-",
    "marketValue": "-",
    "name": "Colin Dagba",
    "nationality": "France",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "19",
    "fee": "-",
    "marketValue": "-",
    "name": "Antoine Bernede",
    "nationality": "France",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "19",
    "fee": "-",
    "marketValue": "-",
    "name": "Stanley N'Soki",
    "nationality": "France",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "18",
    "fee": "-",
    "marketValue": "500 Th. €",
    "name": "Moussa Diaby",
    "nationality": "France",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "18",
    "fee": "-",
    "marketValue": "1,00 Mill. €",
    "name": "Timothy Weah",
    "nationality": "United States",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "17",
    "fee": "-",
    "marketValue": "-",
    "name": "Yacine Adli",
    "nationality": "France",
    "secondPartyTeam": "Paris SG B",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "20",
    "fee": "End of loan",
    "marketValue": "700 Th. €",
    "name": "Jonathan Ikoné",
    "nationality": "France",
    "secondPartyTeam": "Montpellier",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "28",
    "fee": "End of loan",
    "marketValue": "18,00 Mill. €",
    "name": "Grzegorz Krychowiak",
    "nationality": "Poland",
    "secondPartyTeam": "West Brom",
    "secondPartyTeamCountry": "England",
  },
  Object {
    "age": "22",
    "fee": "End of loan",
    "marketValue": "600 Th. €",
    "name": "Rémy Descamps",
    "nationality": "France",
    "secondPartyTeam": "Tours FC",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "25",
    "fee": "End of loan",
    "marketValue": "7,50 Mill. €",
    "name": "Jesé",
    "nationality": "Spain",
    "secondPartyTeam": "Stoke City",
    "secondPartyTeamCountry": "England",
  },
  Object {
    "age": "21",
    "fee": "End of loan",
    "marketValue": "40,00 Mill. €",
    "name": "Gonçalo Guedes",
    "nationality": "Portugal",
    "secondPartyTeam": "Valencia",
    "secondPartyTeamCountry": "Spain",
  },
  Object {
    "age": "25",
    "fee": "End of loan",
    "marketValue": "1,50 Mill. €",
    "name": "Jean-Christophe Bahebeck",
    "nationality": "France",
    "secondPartyTeam": "FC Utrecht",
    "secondPartyTeamCountry": "Netherlands",
  },
  Object {
    "age": "20",
    "fee": "End of loan",
    "marketValue": "1,50 Mill. €",
    "name": "Odsonne Edouard",
    "nationality": "France",
    "secondPartyTeam": "Celtic",
    "secondPartyTeamCountry": "Scotland",
  },
]
`;

exports[`convertData teamTransfers departures transfers should convert html data in a correct way 1`] = `
Array [
  Object {
    "age": "21",
    "fee": "40,00 Mill. €",
    "marketValue": "40,00 Mill. €",
    "name": "Gonçalo Guedes",
    "nationality": "Portugal",
    "secondPartyTeam": "Valencia",
    "secondPartyTeamCountry": "Spain",
  },
  Object {
    "age": "29",
    "fee": "24,70 Mill. €",
    "marketValue": "15,00 Mill. €",
    "name": "Javier Pastore",
    "nationality": "Argentina",
    "secondPartyTeam": "AS Roma",
    "secondPartyTeamCountry": "Italy",
  },
  Object {
    "age": "28",
    "fee": "24,00 Mill. €",
    "marketValue": "17,00 Mill. €",
    "name": "Yuri Berchiche",
    "nationality": "Spain",
    "secondPartyTeam": "Athletic",
    "secondPartyTeamCountry": "Spain",
  },
  Object {
    "age": "20",
    "fee": "10,30 Mill. €",
    "marketValue": "1,50 Mill. €",
    "name": "Odsonne Edouard",
    "nationality": "France",
    "secondPartyTeam": "Celtic",
    "secondPartyTeamCountry": "Scotland",
  },
  Object {
    "age": "20",
    "fee": "5,00 Mill. €",
    "marketValue": "700 Th. €",
    "name": "Jonathan Ikoné",
    "nationality": "France",
    "secondPartyTeam": "LOSC Lille",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "22",
    "fee": "Loan fee:",
    "marketValue": "30,00 Mill. €",
    "name": "Giovani Lo Celso",
    "nationality": "Argentina",
    "secondPartyTeam": "Real Betis",
    "secondPartyTeamCountry": "Spain",
  },
  Object {
    "age": "28",
    "fee": "Loan fee:",
    "marketValue": "18,00 Mill. €",
    "name": "Grzegorz Krychowiak",
    "nationality": "Poland",
    "secondPartyTeam": "Loko Moscow",
    "secondPartyTeamCountry": "Russia",
  },
  Object {
    "age": "25",
    "fee": "Free Transfer",
    "marketValue": "1,50 Mill. €",
    "name": "Jean-Christophe Bahebeck",
    "nationality": "France",
    "secondPartyTeam": "FC Utrecht",
    "secondPartyTeamCountry": "Netherlands",
  },
  Object {
    "age": "28",
    "fee": "Loan",
    "marketValue": "8,00 Mill. €",
    "name": "Kevin Trapp",
    "nationality": "Germany",
    "secondPartyTeam": "E. Frankfurt",
    "secondPartyTeamCountry": "Germany",
  },
  Object {
    "age": "22",
    "fee": "Loan",
    "marketValue": "600 Th. €",
    "name": "Rémy Descamps",
    "nationality": "France",
    "secondPartyTeam": "Clermont Foot",
    "secondPartyTeamCountry": "France",
  },
  Object {
    "age": "31",
    "fee": "-",
    "marketValue": "5,00 Mill. €",
    "name": "Hatem Ben Arfa",
    "nationality": "France",
    "secondPartyTeam": "Without Club",
    "secondPartyTeamCountry": "",
  },
  Object {
    "age": "35",
    "fee": "-",
    "marketValue": "1,00 Mill. €",
    "name": "Thiago Motta",
    "nationality": "Italy",
    "secondPartyTeam": "Retired",
    "secondPartyTeamCountry": "",
  },
  Object {
    "age": "19",
    "fee": "End of loan",
    "marketValue": "120,00 Mill. €",
    "name": "Kylian Mbappé",
    "nationality": "France",
    "secondPartyTeam": "Monaco",
    "secondPartyTeamCountry": "France",
  },
]
`;
